[HAR-43] Fixed sass errors; Updated states; Added icons and spacings;

--- a/scss/controls/input-stepper.scss
+++ b/scss/controls/input-stepper.scss
@@ -1,3 +1,4 @@
+$input-stepper-input-padding: ($control-height-100 - ($line-height-20 * $font-size-200)) / 2 !default;
 $input-stepper-border-color: $color-ui-300 !default;
 $input-stepper-button-background-color: $color-primary !default;
 
@@ -5,13 +6,20 @@ $input-stepper-button-background-color: $color-primary !default;
 	@include clearfix;
 	display: flex;
 
+	&.is-skeleton {
+		pointer-events: none;
+	}
+
 	&.is-disabled {
+		pointer-events: none;
+	}
+
+	&.is-frozen {
+		pointer-events: none;
 	}
 
 	&.is-loading {
-	}
-
-	&.is-animated-loading {
+		pointer-events: none;
 	}
 }
 
@@ -23,29 +31,33 @@ $input-stepper-button-background-color: $color-primary !default;
 }
 
 .input-stepper__input {
-	padding-top: ($control-height-100 - ($line-height-20 * $font-size-200)) / 2;
-	padding-bottom: ($control-height-100 - ($line-height-20 * $font-size-200)) / 2;
+	padding-top: $input-stepper-input-padding;
 	padding-right: $spacing;
+	padding-bottom: $input-stepper-input-padding;
 	padding-left: $spacing;
 	width: $control-height-200;
 	height: $control-height-100;
 	border-radius: 0;
 	color: $color-text;
 	text-align: center;
-	line-height: $line-height-20;
 	font-size: $font-size-200;
+	line-height: $line-height-20;
 	order: 2;
 	appearance: none;
+
+	.input-stepper.is-skeleton & {
+		color: transparent;
+	}
 
 	.input-stepper.is-disabled & {
 		opacity: $opacity-disabled;
 	}
 
-	.input-stepper.is-animated-loading & {
+	.input-stepper.is-loading & {
 		background-image: linear-gradient(-45deg, rgba(0, 0, 0, 0.1) 25%, transparent 25%, transparent 50%, rgba(0, 0, 0, 0.1) 50%, rgba(0, 0, 0, 0.1) 75%, transparent 75%, transparent);
 		background-size: 50px 50px;
 		background-repeat: repeat;
-		opacity: 1; // NOTE reset disabled styling when is-loading.
+		opacity: $opacity-100; // NOTE: reset disabled styling.
 		animation: InputStepperIndeterminateProgress 2s linear infinite;
 	}
 
@@ -70,17 +82,17 @@ $input-stepper-button-background-color: $color-primary !default;
 	height: $control-height-100;
 	background-color: $input-stepper-button-background-color;
 	background-position: center;
-	background-size: 38.2% auto; // @NOTE: golden ratio
+	background-size: $golden-ratio-80 auto;
 	background-repeat: no-repeat;
 	text-align: center;
 	appearance: none;
 	user-select: none;
 
-	.input-stepper.is-disabled & {
+	&.is-disabled {
 		opacity: $opacity-disabled;
 	}
 
-	&.is-disabled {
+	.input-stepper.is-disabled & {
 		opacity: $opacity-disabled;
 	}
 
@@ -104,7 +116,7 @@ $input-stepper-button-background-color: $color-primary !default;
 	border-right: none;
 	border-bottom: $input-stepper-border-color;
 	border-left: $input-stepper-border-color;
-	background-image: url(get-svg-uri($icon-minus-bold, $color-text-light));
+	background-image: url(get-svg-uri($icon-minus, $color-text-diap));
 	order: 1;
 
 	.input-stepper--vertical & {
@@ -119,7 +131,7 @@ $input-stepper-button-background-color: $color-primary !default;
 	border-right: $input-stepper-border-color;
 	border-bottom: $input-stepper-border-color;
 	border-left: none;
-	background-image: url(get-svg-uri($icon-plus-bold, $color-text-light));
+	background-image: url(get-svg-uri($icon-plus, $color-text-diap));
 	order: 3;
 
 	.input-stepper--vertical & {
@@ -129,6 +141,7 @@ $input-stepper-button-background-color: $color-primary !default;
 }
 
 @keyframes InputStepperIndeterminateProgress {
+
 	0% {
 		background-position: 0 0;
 	}
