--- a/scss/utilities/get-svg-uri.scss
+++ b/scss/utilities/get-svg-uri.scss
@@ -22,8 +22,10 @@
 	@return 'data:image/svg+xml;charset=utf-8,' + $svg;
 }
 
-@function get-svg-uri($svg, $fill-color: #000) {
-	$svg: str-replace($svg, 'fill=""', 'fill="' + $fill-color + '"' );
+@function get-svg-uri($svg, $color: #000) {
+	$svg: str-replace($svg, 'fill=""', 'fill="' + $color + '"');
+	$svg: str-replace($svg, '#000', $color);
+	$svg: str-replace($svg, '#000000', $color);
 	$svg: svg-encode($svg);
 	@return $svg;
 }
